package javaLang.command.demo1;

/**
 * 抽象命令接口
 */
public interface Command {
    //执行具体操作的命令
    void execute();
}
